--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.2",
     "history": "^5.3.0",
+    "material-ui-flags": "^1.2.4",
     "mdb-react-ui-kit": "^4.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-intl": "^6.2.1",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
